--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,120 +1,180 @@
-{% load static %}
-
-<!doctype html>
-<!--
-* Tabler - Premium and Open Source dashboard template with responsive and high quality UI.
-* @version 1.0.0-beta5
-* @link https://tabler.io
-* Copyright 2018-2021 The Tabler Authors
-* Copyright 2018-2021 codecalm.net Paweł Kuna
-* Licensed under MIT (https://github.com/tabler/tabler/blob/master/LICENSE)
--->
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
-    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <title>Sign in - Tabler - Premium and Open Source dashboard template with responsive and high quality UI.</title>
-    <!-- CSS files -->
-    <link rel="stylesheet" href="/static/pms/dist/css/tabler.css">
-    
-  </head>
-  <body  class=" border-top-wide border-primary d-flex flex-column">
-    <div class="page page-center">
-      <div class="container-tight py-4">
-        <div class="text-center mb-4">
-          <a href="." class="navbar-brand navbar-brand-autodark"><img src="./static/logo.svg" height="36" alt=""></a>
-        </div>
-        
-      {% if form.errors %}
+
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+	<link rel="stylesheet" href="/static/pms/dist/css/pages/login.css">
+	<title>
+		Animated login signup
+	</title>
+</head>
+
+<body>
+	<div id="container" class="container">
+		<!-- FORM SECTION -->
+		      {% if form.errors %}
         <p style="color: red">ユーザー名とパスワードが一致しません。</p>
       {% endif %}
-        <form class="card card-md" method="post">
-        {% csrf_token %}
-          <div class="card-body">
-            <h2 class="card-title text-center mb-4">Login to your account</h2>
-            
-            <div class="mb-3">
-              <label class="form-label">ユーザー名:</label>
-              <!--<label class="visually-hidden">User name</label>-->
-              <input type="text"
-                    name ="username"
-                    id="id_username" 
-                    maxlength="150" 
-                    class="form-control" 
-                    autocomplete="username" 
-                    placeholder="ユーザー名"
-                    required autofocus>                
-            </div>
-            
-                      
-            <div class="mb-2">
-              <label class="form-label">
-                パスワード:
-                <span class="form-label-description">
-                  <a href="./forgot-password.html">パスワードを忘れましたか?</a>
-                </span>
-              </label>
-              
-              <div class="input-group input-group-flat">
-                <input type="password" 
-                       class="form-control" 
-                       name="password" 
-                       id="id_password"
-                       autocomplete="current-password"
-                       placeholder="パスワード"
-                       required>
-                
-                <span class="input-group-text">
-                  <a href="#" class="link-secondary" title="Show password" data-bs-toggle="tooltip"><!-- Download SVG icon from http://tabler-icons.io/i/eye -->
-                    <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><circle cx="12" cy="12" r="2" /><path d="M22 12c-2.667 4.667 -6 7 -10 7s-7.333 -2.333 -10 -7c2.667 -4.667 6 -7 10 -7s7.333 2.333 10 7" /></svg>
-                  </a>
-                </span>
-                
-              </div>
-            </div>
-            <div class="mb-2">
-              <label class="form-check">
-                <input type="checkbox" class="form-check-input"/>
-                <span class="form-check-label">Remember me on this device</span>
-              </label>
-            </div>
-            <div class="form-footer">
-              <button type="submit" class="btn btn-primary w-100">Sign in</button>
-            </div>
-          </div>
-          
-          
-          <div class="hr-text">or</div>
-          <div class="card-body">
-            <div class="row">
-              <div class="col"><a href="#" class="btn btn-white w-100">
-                  <!-- Download SVG icon from http://tabler-icons.io/i/brand-github -->
-                  <svg xmlns="http://www.w3.org/2000/svg" class="icon text-github" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" /></svg>
-                  Login with Github
-                </a></div>
-              <div class="col"><a href="#" class="btn btn-white w-100">
-                  <!-- Download SVG icon from http://tabler-icons.io/i/brand-twitter -->
-                  <svg xmlns="http://www.w3.org/2000/svg" class="icon text-twitter" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M22 4.01c-1 .49 -1.98 .689 -3 .99c-1.121 -1.265 -2.783 -1.335 -4.38 -.737s-2.643 2.06 -2.62 3.737v1c-3.245 .083 -6.135 -1.395 -8 -4c0 0 -4.182 7.433 4 11c-1.872 1.247 -3.739 2.088 -6 2c3.308 1.803 6.913 2.423 10.034 1.517c3.58 -1.04 6.522 -3.723 7.651 -7.742a13.84 13.84 0 0 0 .497 -3.753c-.002 -.249 1.51 -2.772 1.818 -4.013z" /></svg>
-                  Login with Twitter
-                </a></div>
-            </div>
-            
-          </div>
-          
-<!--          <input type="hidden"-->
-<!--               name="next"-->
-<!--               value="{% url 'pms:pms' %}">-->
-          
-        </form>
-        <div class="text-center text-muted mt-3">
-          Don't have account yet? <a href="{% url 'accounts:signup' %}" tabindex="-1">Sign up</a>
-        </div>
-      </div>
-    </div>
-    <!-- Libs JS -->
-    <!-- Tabler Core -->
-    <script src="/static/pms/dist/js/tabler.js"></script>
-    
-  </body>
+		<form action="" method="post">
+			{% csrf_token %}
+			<div class="row">
+				<!-- SIGN UP -->
+				<div class="col align-items-center flex-col sign-up">
+					<div class="form-wrapper align-items-center">
+						<div class="form sign-up">
+							<div class="input-group">
+								<i class='bx bxs-user'></i>
+								<input type="text" placeholder="Username">
+							</div>
+							<div class="input-group">
+								<i class='bx bx-mail-send'></i>
+								<input type="email" placeholder="Email">
+							</div>
+							<div class="input-group">
+								<i class='bx bxs-lock-alt'></i>
+								<input type="password" placeholder="Password">
+							</div>
+							<div class="input-group">
+								<i class='bx bxs-lock-alt'></i>
+								<input type="password" placeholder="Confirm password">
+							</div>
+							<button>
+								Sign up
+							</button>
+							<p>
+								<span>
+									Already have an account?
+								</span>
+								<b onclick="toggle()" class="pointer">
+									Sign in here
+								</b>
+							</p>
+						</div>
+					</div>
+					<div class="form-wrapper">
+<!--						<div class="social-list align-items-center sign-up">-->
+<!--							<div class="align-items-center facebook-bg">-->
+<!--								<i class='bx bxl-facebook'></i>-->
+<!--							</div>-->
+<!--							<div class="align-items-center google-bg">-->
+<!--								<i class='bx bxl-google'></i>-->
+<!--							</div>-->
+<!--							<div class="align-items-center twitter-bg">-->
+<!--								<i class='bx bxl-twitter'></i>-->
+<!--							</div>-->
+<!--							<div class="align-items-center insta-bg">-->
+<!--								<i class='bx bxl-instagram-alt'></i>-->
+<!--							</div>-->
+<!--						</div>-->
+					</div>
+				</div>
+				<!-- END SIGN UP -->
+				<!-- SIGN IN -->
+				<div class="col align-items-center flex-col sign-in">
+					<div class="form-wrapper align-items-center">
+						<div class="form sign-in">
+							<div class="input-group">
+								<i class='bx bxs-user'></i>
+								<input type="text"
+									   placeholder="Username"
+								       name ="username"
+									   id="id_username"
+									   maxlength="150">
+							</div>
+							<div class="input-group">
+								<i class='bx bxs-lock-alt'></i>
+								<input type="password"
+									   placeholder="Password"
+									   name="password"
+									   id="id_password">
+							</div>
+<!--							<button type="submit" >-->
+<!--								Sign in-->
+<!--							</button>-->
+							<button type="submit" class="btn btn-primary w-100">Sign in</button>
+							<p>
+								<b>
+									Forgot password?
+								</b>
+							</p>
+							<p>
+								<span>
+									Don't have an account?
+								</span>
+								<b onclick="toggle()" class="pointer">
+									Sign up here
+								</b>
+							</p>
+						</div>
+					</div>
+					<div class="form-wrapper">
+<!--						<div class="social-list align-items-center sign-in">-->
+<!--							<div class="align-items-center facebook-bg">-->
+<!--								<i class='bx bxl-facebook'></i>-->
+<!--							</div>-->
+<!--							<div class="align-items-center google-bg">-->
+<!--								<i class='bx bxl-google'></i>-->
+<!--							</div>-->
+<!--							<div class="align-items-center twitter-bg">-->
+<!--								<i class='bx bxl-twitter'></i>-->
+<!--							</div>-->
+<!--							<div class="align-items-center insta-bg">-->
+<!--								<i class='bx bxl-instagram-alt'></i>-->
+<!--							</div>-->
+<!--						</div>-->
+					</div>
+				</div>
+				<!-- END SIGN IN -->
+			</div>
+		</form>
+		<!-- END FORM SECTION -->
+		<!-- CONTENT SECTION -->
+		<div class="row content-row">
+			<!-- SIGN IN CONTENT -->
+			<div class="col align-items-center flex-col">
+				<div class="text sign-in">
+					<h2>
+						Welcome Back
+					</h2>
+<!--					<p>-->
+<!--						Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit obcaecati, accusantium-->
+<!--						molestias, laborum, aspernatur deserunt officia voluptatum tempora dicta quo ab ullam. Assumenda-->
+<!--						enim harum minima possimus dignissimos deserunt rem.-->
+<!--					</p>-->
+				</div>
+<!--				<div class="img sign-in">-->
+<!--					<img src="/static/pms/dist/img/login/bernd-dittrich-bCOHrXAa0pM-unsplash.jpg" alt="welcome">-->
+<!--				</div>-->
+			</div>
+			<!-- END SIGN IN CONTENT -->
+			<!-- SIGN UP CONTENT -->
+			<div class="col align-items-center flex-col">
+<!--				<div class="img sign-up">-->
+<!--					<img src="/static/pms/dist/img/login/ux-store-jJT2r2n7lYA-unsplash.jpg" alt="welcome">-->
+<!--				</div>-->
+				<div class="text sign-up">
+					<h2>
+						Join with us
+					</h2>
+<!--					<p>-->
+<!--						Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit obcaecati, accusantium-->
+<!--						molestias, laborum, aspernatur deserunt officia voluptatum tempora dicta quo ab ullam. Assumenda-->
+<!--						enim harum minima possimus dignissimos deserunt rem.-->
+<!--					</p>-->
+				</div>
+<!--				<div class="img sign-up">-->
+<!--					<img src="/static/pms/dist/img/login/thisisengineering-raeng-uOhBxB23Wao-unsplash.jpg" alt="welcome">-->
+<!--				</div>-->
+
+			</div>
+			<!-- END SIGN UP CONTENT -->
+		</div>
+		<!-- END CONTENT SECTION -->
+	</div>
+
+	<script src="/static/pms/dist/js/pages/login.js"></script>
+</body>
+
 </html>
