--- a/templates/pms/common/_top_navigation.html
+++ b/templates/pms/common/_top_navigation.html
@@ -37,6 +37,24 @@
     </div>
   </li>
 
+  <li class="nav-item dropdown">
+    <a class="nav-link" data-toggle="dropdown" href="#">
+      <i class="far fa-user"></i>
+    </a>
+    <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
+      <div class="dropdown-divider"></div>
+      <a href="#" class="dropdown-item">
+        <i class="fas fa-address-card mr-2"></i> Profile & account
+      </a>
+      <a href="#" class="dropdown-item">
+        <i class="fa fa-cog mr-2" aria-hidden="true"></i>Settings
+      </a>
+      <div class="dropdown-divider"></div>
+      <a href="{% url 'accounts:logout' %}" class="dropdown-item dropdown-footer">
+        <i class="fa fa-sign-out mr-2" aria-hidden="true"></i>Logout
+      </a>
+    </div>
+  </li>
   <!-- Messages Dropdown Menu -->
   <li class="nav-item dropdown">
     <a class="nav-link" data-toggle="dropdown" href="#">
@@ -121,6 +139,7 @@
       <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>
     </div>
   </li>
+
   <li class="nav-item">
     <a class="nav-link" data-widget="fullscreen" href="#" role="button">
       <i class="fas fa-expand-arrows-alt"></i>
