--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -19,13 +19,13 @@
             <div class="row">
                 <div class="col-md-4 col-md-offset-4 col-centered">
                     <div class="login-panel">
-                        <h4 class="login-panel-title">SI-TOWER</h4>
+                        <h4 class="login-panel-title">ログイン</h4>
                         <p class="login-panel-tagline">Sitename helps you connect and share with the people in your life.</p>
                         <div class="login-panel-section">
                             <div class="form-group">
                                 <div class="input-group margin-bottom-sm">
                                     <span class="input-group-addon"><i class="fa fa-envelope-o fa-fw" aria-hidden="true"></i></span>
-                                    {% render_field form.username id="id_username" class="form-control" placeholder="Email address / User Name" %}
+                                    {% render_field form.login id="id_login" class="form-control" placeholder="Email address / User Name" %}
                                 </div>
                             </div>
                             <div class="form-group">
