--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -14,30 +14,19 @@
   <body>
   <span class="header-ribbon"/>
   <div class="container-fluid">
-        <form  method="post">
+        <form action="" method="post">
         {% csrf_token %}
             <div class="row">
                 <div class="col-md-4 col-md-offset-4 col-centered">
                     <div class="login-panel">
-                        <h4 class="login-panel-title">SI-TOWER</h4>
+                        <h4 class="login-panel-title">パスワードリセット</h4>
                         <p class="login-panel-tagline">Sitename helps you connect and share with the people in your life.</p>
                         <div class="login-panel-section">
                             <div class="form-group">
                                 <div class="input-group margin-bottom-sm">
                                     <span class="input-group-addon"><i class="fa fa-envelope-o fa-fw" aria-hidden="true"></i></span>
-                                    {% render_field form.username id="id_username" class="form-control" placeholder="Email address / User Name" %}
+                                    {% render_field form.email id="id_email" class="form-control" placeholder="メールアドレス" %}
                                 </div>
-                            </div>
-                            <div class="form-group">
-                                <div class="input-group">
-                                    <span class="input-group-addon"><i class="fa fa-key fa-fw" aria-hidden="true"></i></span>
-                                    {% render_field form.password id="id_password" class="form-control" placeholder="Password" %}
-                                </div>
-                            </div>
-                            <div class="checkbox checkbox-circle checkbox-success checkbox-small">
-                                <input type="checkbox" id="checkbox1">
-                                <label for="checkbox1">Keep me logged in</label>
-                                <a style="text-decoration: underline;" href="{% url 'accounts:passwordReset' %}" class="pull-right">Forget your password?</a>
                             </div>
                         </div>
                         {% for field in form %}
@@ -46,8 +35,8 @@
                                        {% endfor %}
                         {% endfor %}
                         <div class="login-panel-section">
-                            <button type="submit" class="btn btn-default"><i class="fa fa-sign-in fa-fw" aria-hidden="true"></i>Sign in
-                            </button> | <a style="text-decoration: underline;" href="{% url 'accounts:signup' %}">Create Your Account</a>
+                            <button type="submit" class="btn btn-default"><i class="fa fa-sign-in fa-fw" aria-hidden="true"></i>パスワードリセット
+                            </button> | <a style="text-decoration: underline;" href="{% url 'accounts:signup' %}">Create Your Account</a> | <a style="text-decoration: underline;" href="{% url 'accounts:login' %}" >Sign in</a>
                         </div>
                     </div>
                 </div>
