--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -19,11 +19,9 @@
             <div class="row">
                 <div class="col-md-4 col-md-offset-4 col-centered">
                     <div class="login-panel">
-                        <h4 class="login-panel-title">Create new account</h4>
+                        <h4 class="login-panel-title">アカウントを作成</h4>
                         <p class="login-panel-tagline">Sitename helps you connect and share with the people in your life.</p>
                         <div class="login-panel-section">
-
-
                                 <div class="mb-3">
                                     <div class="form-group">
                                         <div class="input-group">
@@ -66,7 +64,7 @@
                                          <p style="color: red">{{ error }}</p>
                                        {% endfor %}
                                     {% endfor %}
-                                 </div>
+                                </div>
                         </div>
                         <div class="login-panel-section">
                             <button type="submit" class="btn btn-default"><i class="fa fa-plus" aria-hidden="true"></i> Create new account</button>
