--- a/templates/pms/common/_top_navigation.html
+++ b/templates/pms/common/_top_navigation.html
@@ -42,12 +42,19 @@
       <i class="far fa-user"></i>
     </a>
     <div class="dropdown-menu dropdown-menu-lg dropdown-menu-right">
+      <a class="dropdown-item dropdown-header">
+        LoginUser : {{user.username}}
+      </a>
       <div class="dropdown-divider"></div>
       <a href="#" class="dropdown-item">
-        <i class="fas fa-address-card mr-2"></i> Profile & account
+        <i class="fa fa-address-card mr-2"></i>Profile & account
       </a>
       <a href="#" class="dropdown-item">
         <i class="fa fa-cog mr-2" aria-hidden="true"></i>Settings
+      </a>
+      <div class="dropdown-divider"></div>
+      <a href="/accounts/password/set/" class="dropdown-item">
+        <i class="fa fa-key mr-2" aria-hidden="true"></i>Change Password
       </a>
       <div class="dropdown-divider"></div>
       <a href="{% url 'accounts:logout' %}" class="dropdown-item dropdown-footer">
