--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,40 +1,48 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="/static/pms/plugins/login/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/pms/plugins/login/css/awesome-bootstrap-checkbox.min.css" rel="stylesheet">
+    <link href="/static/pms/plugins/login/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/static/pms/plugins/login/css/style.css" rel="stylesheet">
     <title>{% block head_title %}{% endblock %}</title>
-    {% block extra_head %}
-    {% endblock %}
+    {% block extra_head %}{% endblock %}
   </head>
+
   <body>
-    {% block body %}
-
-    {% if messages %}
-    <div>
-      <strong>Messages:</strong>
-      <ul>
-        {% for message in messages %}
-        <li>{{message}}</li>
-        {% endfor %}
-      </ul>
-    </div>
-    {% endif %}
-
-    <div>
-      <strong>Menu:</strong>
-      <ul>
-        {% if user.is_authenticated %}
-        <li><a href="{% url 'account_email' %}">Change E-mail</a></li>
-        <li><a href="{% url 'account_logout' %}">Sign Out</a></li>
-        {% else %}
-        <li><a href="{% url 'account_login' %}">Sign In</a></li>
-        <li><a href="{% url 'account_signup' %}">Sign Up</a></li>
-        {% endif %}
-      </ul>
+    <span class="header-ribbon"/>
+    <div class="container-fluid">
+      <form  method="post">
+      {% csrf_token %}
+          <div class="row">
+              <div class="col-md-4 col-md-offset-4 col-centered">
+                  <div class="login-panel">
+                      <h4 class="login-panel-title">{% block body_title %}{% endblock %}</h4>
+                      {% if messages %}
+                      <!-- <div> -->
+                        <!-- <strong>Messages:</strong> -->
+                        <!-- <ul> -->
+                          {% for message in messages %}
+                          <p>{{message}}</p>
+                          {% endfor %}
+                        <!-- </ul>
+                      </div> -->
+                      {% endif %}
+                      <p class="login-panel-tagline">{% block tagline %}{% endblock %}</p>
+                      {% block contents %}{% endblock %}
+                  </div>
+              </div>
+          </div>
+      </form>
     </div>
     {% block content %}
     {% endblock %}
-    {% endblock %}
     {% block extra_body %}
     {% endblock %}
+    <script src="/static/pms/plugins/login/js/jquery.min.js"></script>
+    <script src="/static/pms/plugins/login/js/bootstrap.min.js"></script>
   </body>
 </html>
