--- a/templates/allauth/account/verified_email_required.html
+++ b/templates/allauth/account/verified_email_required.html
@@ -13,7 +13,7 @@
 you are who you claim to be. For this purpose, we require that you
 verify ownership of your e-mail address. {% endblocktrans %}</p>
 
-<p>{% blocktrans %}We have sent an e-mail to you for
+<p>{% blocktrans %}BBBB We have sent an e-mail to you for
 verification. Please click on the link inside that e-mail. If you do not see the verification e-mail in your main inbox, check your spam folder. Otherwise
 contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
 
