--- a/templates/allauth/account/password_change.html
+++ b/templates/allauth/account/password_change.html
@@ -1,16 +1,38 @@
 {% extends "account/base.html" %}
 
 {% load i18n %}
-
+{% load widget_tweaks %}
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
-{% block content %}
+{% block contents %}
     <h1>{% trans "Change Password" %}</h1>
 
     <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" name="action">{% trans "Change Password" %}</button>
-        <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+
+        <div class="login-panel-section">
+            <div class="form-group">
+                <div class="input-group margin-bottom-sm">
+                    <span class="input-group-addon"><i class="fa fa-key fa-fw" aria-hidden="true"></i></span>
+                    {% render_field form.oldpassword id="id_oldpassword" class="form-control" placeholder="現在のパスワード" %}
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="fa fa-key fa-fw" aria-hidden="true"></i></span>
+                    {% render_field form.password1 id="id_password1" class="form-control" placeholder="新しいパスワード" %}
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="input-group">
+                    <span class="input-group-addon"><i class="fa fa-key fa-fw" aria-hidden="true"></i></span>
+                    {% render_field form.password2 id="id_password2" class="form-control" placeholder="新しいパスワード(再入力)" %}
+                </div>
+            </div>
+        </div>        
+        <div class="login-panel-section">
+            <button type="submit" class="btn btn-default" name="action">{% trans "Change Password" %}</button>
+            <a href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>|<a href="{% url 'pms:index' %}">{% trans "Home" %}</a>
+        </div> 
     </form>
 {% endblock %}
