--- a/templates/pms/pm/create/work.html
+++ b/templates/pms/pm/create/work.html
@@ -34,7 +34,7 @@
                     <li class="nav-item">
                         <a class="nav-link" id="custom-content-above-messages-tab" data-toggle="pill"
                             href="#custom-content-above-messages" role="tab"
-                            aria-controls="custom-content-above-messages" aria-selected="false">Messages</a>
+                            aria-controls="custom-content-above-messages" aria-selected="false">History</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" id="custom-content-above-settings-tab" data-toggle="pill"
@@ -244,7 +244,7 @@
                     </div>
                     <div class="tab-pane fade" id="custom-content-above-messages" role="tabpanel"
                         aria-labelledby="custom-content-above-messages-tab">
-                        タブ３コンテンツ
+                        {% include 'pms/pm/result_list/work/work_historylist.html' %}
                     </div>
                     <div class="tab-pane fade" id="custom-content-above-settings" role="tabpanel"
                         aria-labelledby="custom-content-above-settings-tab">
