2022/06/13: Add Pandas Chartjs

--- a/templates/pms/pm/result_list/issue/issue_list.html
+++ b/templates/pms/pm/result_list/issue/issue_list.html
@@ -1,5 +1,5 @@
 <div class="card-body">
-<table id="serach_workdata" style="width: 100%;" class="table table-bordered table-sm">
+<table id="serach_data" style="width: 100%;" class="table table-bordered table-sm">
     <thead>
         <tr>
             <th>#</th>
