--- a/templates/pms/pm/result_list/issue/issue_worklist.html
+++ b/templates/pms/pm/result_list/issue/issue_worklist.html
@@ -3,7 +3,7 @@
 <!--<table id="" style="width: 100%;" class="table table-sm jambo_table bulk_action" >-->
 <form name="relationList_Form" method="POST">
     {% csrf_token %}
-    <table id="serach_workdata" style="width: 100%;" class="table table-bordered table-sm">
+    <table id="serach_data" style="width: 100%;" class="table table-bordered table-sm">
             <thead>
                 <tr>
                     <th>#ID</th>
