--- a/templates/pms/pm/result_list/work/work_lssuelist.html
+++ b/templates/pms/pm/result_list/work/work_lssuelist.html
@@ -5,8 +5,8 @@
 <form name="relationList_Form" method="POST">
     {% csrf_token %}
     <input type="hidden" id="data_pk" value={{object.pk}}>
-    <table id="serach_workdata" style="width: 100%;" class="table table-bordered table-sm">
-<!--    <table id="res_data" style="width: 100%;" class="table table-bordered table-sm">-->
+    <table id="serach_data" style="width: 100%;" class="table table-bordered table-sm">
+    <!--    <table id="res_data" style="width: 100%;" class="table table-bordered table-sm">-->
             <thead>
                 <tr>
                     <th>#ID</th>
