--- a/templates/pms/common/_base.html
+++ b/templates/pms/common/_base.html
@@ -15,28 +15,44 @@
       {% block stylesheets %}
       <!-- Google Font: Source Sans Pro -->
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
+
       <!-- Font Awesome Icons -->
       <link rel="stylesheet" href="/static/pms/plugins/fontawesome-free/css/all.min.css">
+
+      <!-- Ionicons -->
+      <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+
+      <!-- Tempusdominus Bootstrap 4 -->
+      <link rel="stylesheet" href="/static/pms/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
+
       <!-- Theme style -->
       <link rel="stylesheet" href="/static/pms/dist/css/adminlte.min.css">
+
       <!-- Select2 -->
       <link rel="stylesheet" href="/static/pms/plugins/select2/css/select2.min.css">
       <link rel="stylesheet" href="/static/pms/plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css">
+
       <!-- daterange picker -->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.css" integrity="sha512-bYPO5jmStZ9WI2602V2zaivdAnbAhtfzmxnEGh9RwtlI00I9s8ulGe4oBa5XxiC6tCITJH/QG70jswBhbLkxPw==" crossorigin="anonymous" />
+
       <!-- SimpleMDE -->
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/easymde/dist/easymde.min.css">
+
       <!-- DataTables -->
       <link rel="stylesheet" href="/static/pms/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
       <link rel="stylesheet" href="/static/pms/plugins/datatables-responsive/css/responsive.bootstrap4.min.css">
       <link rel="stylesheet" href="/static/pms/plugins/datatables-buttons/css/buttons.bootstrap4.min.css">
+
       <!-- iCheck for checkboxes and radio inputs -->
       <link rel="stylesheet" href="/static/pms/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
+
       <!-- Toastr -->
       <link rel="stylesheet" href="/static/pms/plugins/toastr/toastr.min.css">
 
-      {% endblock stylesheets %}
+      <!-- Custom -->
+      <link rel="stylesheet" href="/static/pms/dist/css/pages/custom.css">
 
+      {% endblock stylesheets %}
     {% endblock head %}
   </head>
 
@@ -67,23 +83,58 @@
       </div>
 
       {% block javascripts %}
-        <!-- jQuery -->
+        <!-- jQuery OK-->
         <script src="/static/pms/plugins/jquery/jquery.min.js"></script>
-        <!-- Bootstrap 4 -->
+
+        <!-- jQuery UI 1.11.4 OK-->
+        <script src="/static/pms/plugins/jquery-ui/jquery-ui.min.js"></script>
+
+        <script>
+          $.widget.bridge('uibutton', $.ui.button)
+        </script>
+
+        <!-- Bootstrap 4 OK-->
         <script src="/static/pms/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-        <!-- AdminLTE App -->
+
+        <!--ChartJS OK-->
+        <script src="/static/pms/plugins/chart.js/Chart.min.js"></script>
+
+        <!-- Sparkline OK-->
+        <script src="/static/pms/plugins/sparklines/sparkline.js"></script>
+
+        <!-- JQVMap OK-->
+        <script src="/static/pms/plugins/jqvmap/jquery.vmap.min.js"></script>
+        <script src="/static/pms/plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
+
+        <!-- jQuery Knob Chart OK-->
+        <script src="/static/pms/plugins/jquery-knob/jquery.knob.min.js"></script>
+
+        <!-- daterangepicker OK-->
+        <script src="/static/pms/plugins/moment/moment.min.js"></script>
+        <script src="/static/pms/plugins/daterangepicker/daterangepicker.js"></script>
+
+        <!-- Tempusdominus Bootstrap 4 OK-->
+        <script src="/static/pms/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
+
+        <!-- Summernote OK-->
+        <script src="/static/pms/plugins/summernote/summernote-bs4.min.js"></script>
+
+        <!-- overlayScrollbars OK-->
+        <!--<script src="/static/pms/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>-->
+
+        <!-- AdminLTE App OK-->
         <script src="/static/pms/dist/js/adminlte.min.js"></script>
+
+        <!-- AdminLTE for demo purposes OK-->
+        <script src="/static/pms/dist/js/demo.js"></script>
 
         <!-- Select2 -->
         <script src="/static/pms/plugins/select2/js/select2.full.min.js"></script>
 
-        <!-- AdminLTE for demo purposes -->
-        <script src="/static/pms/dist/js/demo.js"></script>
-
         <!-- date-range-picker -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js" integrity="sha512-AIOTidJAcHBH2G/oZv9viEGXRqDNmfdPVPYOYKGy3fti0xIplnlgMHUGfuNRzC6FkzIo0iIxgFnr9RikFxK+sw==" crossorigin="anonymous"></script>
 
-        <!-- Summernote -->
+        <!-- Easymde -->
         <script src="https://cdn.jsdelivr.net/npm/easymde/dist/easymde.min.js"></script>
 
         <!-- DataTables  & Plugins -->
@@ -102,10 +153,16 @@
 
         <!-- SweetAlert2 -->
         <script src="/static/pms/plugins/sweetalert2/sweetalert2.min.js"></script>
+
         <!-- Toastr -->
         <script src="/static/pms/plugins/toastr/toastr.min.js"></script>
 
+        <!-- Chart -->
+        <script src="//cdn.jsdelivr.net/npm/chart.js@3.6.2/dist/chart.min.js"></script>
+        <script src="/static/pms/dist/js/pms/custom.js"></script>
+
         <script src="/static/pms/dist/js/pms/pms.js"></script>
+        <script src="/static/pms/dist/js/pages/dashboard.js"></script>
 
       {% endblock javascripts %}
 
