--- a/templates/pms/common/_sidebar.html
+++ b/templates/pms/common/_sidebar.html
@@ -35,7 +35,25 @@
         <ul class="nav nav-pills nav-sidebar flex-column nav-child-indent nav-collapse-hide-child nav-flat" data-widget="treeview" role="menu" data-accordion="false">
           <!-- Add icons to the links using the .nav-icon class
                with font-awesome or any other icon font library -->
-          <li class="nav-item menu-open">
+              <li class="nav-item menu-open">
+                <a href="#" class="nav-link">
+                  <i class="nav-icon fas fa-tachometer-alt"></i>
+                  <p>
+                    ダッシュボード
+                    <i class="right fas fa-angle-left"></i>
+                  </p>
+                </a>
+                <ul class="nav nav-treeview">
+    
+                  <li class="nav-item">
+                    <a href="{% url 'pms:dashboard' %}" class="nav-link">
+                      <i class="far fa-circle nav-icon"></i>
+                      <p>100_ダッシュボード</p>
+                    </a>
+                  </li>
+                </ul>
+              </li>
+               <li class="nav-item menu-open">
             <a href="#" class="nav-link">
               <i class="nav-icon fas fa-tachometer-alt"></i>
               <p>
@@ -60,19 +78,7 @@
               <li class="nav-item">
                 <a href="#" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
-                  <p>811_課題</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>812_RISK</p>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a href="#" class="nav-link">
-                  <i class="far fa-circle nav-icon"></i>
-                  <p>813_ToDo</p>
+                  <p>811_ToDo</p>
                 </a>
               </li>
             </ul>
