--- a/templates/pms/pm/create/work.html
+++ b/templates/pms/pm/create/work.html
@@ -248,7 +248,7 @@
                     </div>
                     <div class="tab-pane fade" id="custom-content-above-settings" role="tabpanel"
                         aria-labelledby="custom-content-above-settings-tab">
-                        タブ４コンテンツ
+                        {% include 'pms/pm/result_list/work/chart.html' %}
                     </div>
                 </div>
             </div>
