--- a/templates/pms/common/_base.html
+++ b/templates/pms/common/_base.html
@@ -158,7 +158,11 @@
         <script src="/static/pms/plugins/toastr/toastr.min.js"></script>
 
         <!-- Chart -->
-        <script src="//cdn.jsdelivr.net/npm/chart.js@3.6.2/dist/chart.min.js"></script>
+        <!-- <script src="//cdn.jsdelivr.net/npm/chart.js@3.6.2/dist/chart.min.js"></script> -->
+        <script src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/Chart.bundle.min.js'></script>
+        <script src='https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-annotation/0.5.7/chartjs-plugin-annotation.min.js'>
+        </script>
+        
         <script src="/static/pms/dist/js/pms/custom.js"></script>
 
         <script src="/static/pms/dist/js/pms/pms.js"></script>
