--- a/templates/pms/common/_base.html
+++ b/templates/pms/common/_base.html
@@ -157,16 +157,17 @@
         <!-- Toastr -->
         <script src="/static/pms/plugins/toastr/toastr.min.js"></script>
 
-        <!-- Chart -->
-        <!-- <script src="//cdn.jsdelivr.net/npm/chart.js@3.6.2/dist/chart.min.js"></script> -->
-        <script src='https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.1/Chart.bundle.min.js'></script>
+        <!-- Chart Today Line-->
         <script src='https://cdnjs.cloudflare.com/ajax/libs/chartjs-plugin-annotation/0.5.7/chartjs-plugin-annotation.min.js'>
         </script>
+        <!-- Chart 円グラぐラベル-->
+        <script src="/static/pms/dist/js/pages/labeling-plugin.js"></script>
         
         <script src="/static/pms/dist/js/pms/custom.js"></script>
 
         <script src="/static/pms/dist/js/pms/pms.js"></script>
         <script src="/static/pms/dist/js/pages/dashboard.js"></script>
+
 
       {% endblock javascripts %}
 
